--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -6,7 +6,7 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title><ui:insert name="title">Default Title</ui:insert></title>
-        <h:outputStylesheet name="css/graystyle.css"/>
+        <h:outputStylesheet name="css/stylesheet.css"/>
     </h:head>
 
     <h:body>
