mod: creted jfs page from entity

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -28,10 +28,31 @@
             </h:form>
         </p>
 
-                    <h:form>
-                    <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
-                </h:form>
-</h:body>
+        <h:form>
+            <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
+        </h:form>
+        <br />
+        <h:link outcome="/armMaster/List" value="Show All ArmMaster Items"/>
+        <br />
+        <h:link outcome="/armType1Master/List" value="Show All ArmType1Master Items"/>
+        <br />
+        <h:link outcome="/armType2Master/List" value="Show All ArmType2Master Items"/>
+        <br />
+        <h:link outcome="/armType3Master/List" value="Show All ArmType3Master Items"/>
+        <br />
+        <h:link outcome="/damageTypeMaster/List" value="Show All DamageTypeMaster Items"/>
+        <br />
+        <h:link outcome="/diceMaster/List" value="Show All DiceMaster Items"/>
+        <br />
+        <h:link outcome="/rulebookMaster/List" value="Show All RulebookMaster Items"/>
+    </h:body>
+
+
+
+
+
+
+
 
 
 
