--- a/web/armMaster/Create.xhtml
+++ b/web/armMaster/Create.xhtml
@@ -15,66 +15,74 @@
             </h:panelGroup>
             <h:form>
                 <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_id}" for="id" />
-                    <h:inputText id="id" value="#{armMasterController.selected.id}" title="#{bundle.CreateArmMasterTitle_id}" required="true" requiredMessage="#{bundle.CreateArmMasterRequiredMessage_id}"/>
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_name}" for="name" />
-                    <h:inputText id="name" value="#{armMasterController.selected.name}" title="#{bundle.CreateArmMasterTitle_name}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_weight}" for="weight" />
-                    <h:inputText id="weight" value="#{armMasterController.selected.weight}" title="#{bundle.CreateArmMasterTitle_weight}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_price}" for="price" />
+                    <h:outputLabel value="ID" for="id" />
+                    <h:inputText id="id" value="#{armMasterController.selected.id}" 
+                                 title="#{bundle.CreateArmMasterTitle_id}" required="true" 
+                                 requiredMessage="#{bundle.CreateArmMasterRequiredMessage_id}"/>
+                    <h:outputLabel value="名前" for="name" />
+                    <h:inputText id="name" value="#{armMasterController.selected.name}" />
+                    <h:outputLabel value="重さ" for="weight" />
+                    <h:inputText id="weight" value="#{armMasterController.selected.weight}" 
+                                 title="#{bundle.CreateArmMasterTitle_weight}" />
+                    <h:outputLabel value="値段" for="price" />
                     <h:inputText id="price" value="#{armMasterController.selected.price}" title="#{bundle.CreateArmMasterTitle_price}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_page}" for="page" />
-                    <h:inputText id="page" value="#{armMasterController.selected.page}" title="#{bundle.CreateArmMasterTitle_page}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_naturalReachMultiplier}" for="naturalReachMultiplier" />
-                    <h:inputText id="naturalReachMultiplier" value="#{armMasterController.selected.naturalReachMultiplier}" title="#{bundle.CreateArmMasterTitle_naturalReachMultiplier}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_range}" for="range" />
-                    <h:inputText id="range" value="#{armMasterController.selected.range}" title="#{bundle.CreateArmMasterTitle_range}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_damageDiceNum}" for="damageDiceNum" />
-                    <h:inputText id="damageDiceNum" value="#{armMasterController.selected.damageDiceNum}" title="#{bundle.CreateArmMasterTitle_damageDiceNum}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_criticalMultiplier}" for="criticalMultiplier" />
-                    <h:inputText id="criticalMultiplier" value="#{armMasterController.selected.criticalMultiplier}" title="#{bundle.CreateArmMasterTitle_criticalMultiplier}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_threatRange}" for="threatRange" />
-                    <h:inputText id="threatRange" value="#{armMasterController.selected.threatRange}" title="#{bundle.CreateArmMasterTitle_threatRange}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_secondDamageDiceNum}" for="secondDamageDiceNum" />
-                    <h:inputText id="secondDamageDiceNum" value="#{armMasterController.selected.secondDamageDiceNum}" title="#{bundle.CreateArmMasterTitle_secondDamageDiceNum}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_secondCriticalMultiplier}" for="secondCriticalMultiplier" />
-                    <h:inputText id="secondCriticalMultiplier" value="#{armMasterController.selected.secondCriticalMultiplier}" title="#{bundle.CreateArmMasterTitle_secondCriticalMultiplier}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_secondThreatRange}" for="secondThreatRange" />
-                    <h:inputText id="secondThreatRange" value="#{armMasterController.selected.secondThreatRange}" title="#{bundle.CreateArmMasterTitle_secondThreatRange}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_secondDamageType}" for="secondDamageType" />
-                    <h:inputText id="secondDamageType" value="#{armMasterController.selected.secondDamageType}" title="#{bundle.CreateArmMasterTitle_secondDamageType}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_enhancementBonus}" for="enhancementBonus" />
-                    <h:inputText id="enhancementBonus" value="#{armMasterController.selected.enhancementBonus}" title="#{bundle.CreateArmMasterTitle_enhancementBonus}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_description}" for="description" />
-                    <h:inputText id="description" value="#{armMasterController.selected.description}" title="#{bundle.CreateArmMasterTitle_description}" />
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_rulebook}" for="rulebook" />
-                    <h:selectOneMenu id="rulebook" value="#{armMasterController.selected.rulebook}" title="#{bundle.CreateArmMasterTitle_rulebook}" >
+
+                    <h:outputLabel value="ルールブック" for="rulebook" />
+                    <h:selectOneMenu id="rulebook" value="#{armMasterController.selected.rulebook.name}" >
                         <f:selectItems value="#{rulebookMasterController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_secondDamageDiceType}" for="secondDamageDiceType" />
-                    <h:selectOneMenu id="secondDamageDiceType" value="#{armMasterController.selected.secondDamageDiceType}" title="#{bundle.CreateArmMasterTitle_secondDamageDiceType}" >
-                        <f:selectItems value="#{diceMasterController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
+                    <h:outputLabel value="ルールブックページ" for="page" />
+                    <h:inputText id="page" value="#{armMasterController.selected.page}" title="#{bundle.CreateArmMasterTitle_page}" />
+                    
+                    <h:outputLabel value="生来の間合いの倍率" for="naturalReachMultiplier" />
+                    <h:inputText id="naturalReachMultiplier" value="#{armMasterController.selected.naturalReachMultiplier}" title="#{bundle.CreateArmMasterTitle_naturalReachMultiplier}" />
+                    <h:outputLabel value="射程" for="range" />
+                    <h:inputText id="range" value="#{armMasterController.selected.range}" title="#{bundle.CreateArmMasterTitle_range}" />
+                    <h:outputLabel value="ダメージダイス数" for="damageDiceNum" />
+                    <h:inputText id="damageDiceNum" value="#{armMasterController.selected.damageDiceNum}" title="#{bundle.CreateArmMasterTitle_damageDiceNum}" />
+                    <h:outputLabel value="クリティカル倍率" for="criticalMultiplier" />
+                    <h:inputText id="criticalMultiplier" value="#{armMasterController.selected.criticalMultiplier}" title="#{bundle.CreateArmMasterTitle_criticalMultiplier}" />
+                    <h:outputLabel value="クリティカル可能域" for="threatRange" />
+                    <h:inputText id="threatRange" value="#{armMasterController.selected.threatRange}" title="#{bundle.CreateArmMasterTitle_threatRange}" />
+                    <h:outputLabel value="魔法強化ボーナス" for="enhancementBonus" />
+                    <h:inputText id="enhancementBonus" value="#{armMasterController.selected.enhancementBonus}" title="#{bundle.CreateArmMasterTitle_enhancementBonus}" />
+
+
                     <h:outputLabel value="#{bundle.CreateArmMasterLabel_damageDiceType}" for="damageDiceType" />
-                    <h:selectOneMenu id="damageDiceType" value="#{armMasterController.selected.damageDiceType}" title="#{bundle.CreateArmMasterTitle_damageDiceType}" >
+                    <h:selectOneMenu id="damageDiceType" value="#{armMasterController.selected.damageDiceType}" >
                         <f:selectItems value="#{diceMasterController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_damageType}" for="damageType" />
-                    <h:selectOneMenu id="damageType" value="#{armMasterController.selected.damageType}" title="#{bundle.CreateArmMasterTitle_damageType}" >
+                    <h:outputLabel value="ダメージタイプ" for="damageType" />
+                    <h:selectOneMenu id="damageType" value="#{armMasterController.selected.damageType}">
                         <f:selectItems value="#{damageTypeMasterController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_armType3}" for="armType3" />
-                    <h:selectOneMenu id="armType3" value="#{armMasterController.selected.armType3}" title="#{bundle.CreateArmMasterTitle_armType3}" >
+                    <h:outputLabel value="武器タイプ3" for="armType3" />
+                    <h:selectOneMenu id="armType3" value="#{armMasterController.selected.armType3}" >
                         <f:selectItems value="#{armType3MasterController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_armType2}" for="armType2" />
-                    <h:selectOneMenu id="armType2" value="#{armMasterController.selected.armType2}" title="#{bundle.CreateArmMasterTitle_armType2}" >
+                    <h:outputLabel value="武器タイプ3" for="armType2" />
+                    <h:selectOneMenu id="armType2" value="#{armMasterController.selected.armType2}" >
                         <f:selectItems value="#{armType2MasterController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
-                    <h:outputLabel value="#{bundle.CreateArmMasterLabel_armType1}" for="armType1" />
-                    <h:selectOneMenu id="armType1" value="#{armMasterController.selected.armType1}" title="#{bundle.CreateArmMasterTitle_armType1}" >
+                    <h:outputLabel value="武器タイプ1" for="armType1" />
+                    <h:selectOneMenu id="armType1" value="#{armMasterController.selected.armType1}">
                         <f:selectItems value="#{armType1MasterController.itemsAvailableSelectOne}"/>
                     </h:selectOneMenu>
+                    
+                    <h:outputLabel value="双頭武器ダメージダイス" for="secondDamageDiceType" />
+                    <h:selectOneMenu id="secondDamageDiceType" value="#{armMasterController.selected.secondDamageDiceType.name}">
+                        <f:selectItems value="#{diceMasterController.itemsAvailableSelectOne}"/>
+                    </h:selectOneMenu>                    
+                    <h:outputLabel value="双頭武器ダメージダイス数" for="secondDamageDiceNum" />
+                    <h:inputText id="secondDamageDiceNum" value="#{armMasterController.selected.secondDamageDiceNum}" title="#{bundle.CreateArmMasterTitle_secondDamageDiceNum}" />
+                    <h:outputLabel value="双頭武器クリティカル倍率" for="secondCriticalMultiplier" />
+                    <h:inputText id="secondCriticalMultiplier" value="#{armMasterController.selected.secondCriticalMultiplier}" title="#{bundle.CreateArmMasterTitle_secondCriticalMultiplier}" />
+                    <h:outputLabel value="双頭武器クリティカル可能域" for="secondThreatRange" />
+                    <h:inputText id="secondThreatRange" value="#{armMasterController.selected.secondThreatRange}" title="#{bundle.CreateArmMasterTitle_secondThreatRange}" />
+                    <h:outputLabel value="双頭武器ダメージタイプ" for="secondDamageType" />
+                    <h:inputText id="secondDamageType" value="#{armMasterController.selected.secondDamageType}" title="#{bundle.CreateArmMasterTitle_secondDamageType}" />                    
+                    <h:outputLabel value="備考" for="description" />
+                    <h:inputTextarea id="description" value="#{armMasterController.selected.description}" title="#{bundle.CreateArmMasterTitle_description}" />                    
                 </h:panelGrid>
                 <br />
                 <h:commandLink action="#{armMasterController.create}" value="#{bundle.CreateArmMasterSaveLink}" />
