--- a/web/armMaster/List.xhtml
+++ b/web/armMaster/List.xhtml
@@ -19,145 +19,127 @@
                     <h:outputText value="#{armMasterController.pagination.pageFirstItem + 1}..#{armMasterController.pagination.pageLastItem + 1}/#{armMasterController.pagination.itemsCount}"/>&nbsp;
                     <h:commandLink action="#{armMasterController.previous}" value="#{bundle.Previous} #{armMasterController.pagination.pageSize}" rendered="#{armMasterController.pagination.hasPreviousPage}"/>&nbsp;
                     <h:commandLink action="#{armMasterController.next}" value="#{bundle.Next} #{armMasterController.pagination.pageSize}" rendered="#{armMasterController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{armMasterController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                    <h:dataTable value="#{armMasterController.items}" var="item" border="0" cellpadding="2" 
+                                 cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_id}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.id}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_name}"/>
+                                <h:outputText value="名前"/>
                             </f:facet>
                             <h:outputText value="#{item.name}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_weight}"/>
+                                <h:outputText value="武器タイプ1"/>
+                            </f:facet>
+                            <h:outputText value="#{item.armType1.name}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="武器タイプ2"/>
+                            </f:facet>
+                            <h:outputText value="#{item.armType2.name}"/>                       
+                        </h:column>                            
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="武器タイプ3"/>
+                            </f:facet>
+                            <h:outputText value="#{item.armType3.name}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="重さ"/>
                             </f:facet>
                             <h:outputText value="#{item.weight}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_price}"/>
+                                <h:outputText value="価格"/>
                             </f:facet>
                             <h:outputText value="#{item.price}"/>
                         </h:column>
+
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_page}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.page}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_naturalReachMultiplier}"/>
+                                <h:outputText value="生来の間合いの倍率"/>
                             </f:facet>
                             <h:outputText value="#{item.naturalReachMultiplier}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_range}"/>
+                                <h:outputText value="射程"/>
                             </f:facet>
                             <h:outputText value="#{item.range}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_damageDiceNum}"/>
+                                <h:outputText value="ダメージ"/>
                             </f:facet>
-                            <h:outputText value="#{item.damageDiceNum}"/>
+                            <h:outputText value="#{item.damageDiceNum}#{item.damageDiceType.name}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_criticalMultiplier}"/>
+                                <h:outputText value="ダメージタイプ"/>
+                            </f:facet>
+                            <h:outputText value="#{item.damageType.name}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="クリティカル倍率"/>
                             </f:facet>
                             <h:outputText value="#{item.criticalMultiplier}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_threatRange}"/>
+                                <h:outputText value="クリティカル可能域"/>
                             </f:facet>
                             <h:outputText value="#{item.threatRange}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_secondDamageDiceNum}"/>
+                                <h:outputText value="双頭武器の反対側ダメージ"/>                                                                
                             </f:facet>
-                            <h:outputText value="#{item.secondDamageDiceNum}"/>
+                            <h:outputText value="#{item.secondDamageDiceNum}#{item.secondDamageDiceType}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_secondCriticalMultiplier}"/>
+                                <h:outputText value="双頭武器の反対側クリティカル倍率"/>
                             </f:facet>
                             <h:outputText value="#{item.secondCriticalMultiplier}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_secondThreatRange}"/>
+                                <h:outputText value="双頭武器の反対側クリティカル可能域"/>
                             </f:facet>
                             <h:outputText value="#{item.secondThreatRange}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_secondDamageType}"/>
+                                <h:outputText value="相当武器の反対側"/>
+                                <br/>
+                                <h:outputText value="ダメージタイプ"/>                                
                             </f:facet>
                             <h:outputText value="#{item.secondDamageType}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_enhancementBonus}"/>
+                                <h:outputText value="魔法強化ボーナス"/>
                             </f:facet>
                             <h:outputText value="#{item.enhancementBonus}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_description}"/>
+                                <h:outputText value="備考"/>
                             </f:facet>
                             <h:outputText value="#{item.description}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_rulebook}"/>
+                                <h:outputText value="ルールブック"/>
                             </f:facet>
-                            <h:outputText value="#{item.rulebook}"/>
+                            <h:outputText value="#{item.rulebook.name} P.#{item.page}"/>
                         </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_secondDamageDiceType}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.secondDamageDiceType}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_damageDiceType}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.damageDiceType}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_damageType}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.damageType}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_armType3}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.armType3}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_armType2}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.armType2}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListArmMasterTitle_armType1}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.armType1}"/>
-                        </h:column>
+
                         <h:column>
                             <f:facet name="header">
                                 <h:outputText value="&nbsp;"/>
