--- a/web/armMaster/List.xhtml
+++ b/web/armMaster/List.xhtml
@@ -26,7 +26,7 @@
                             <f:facet name="header">
                                 <h:outputText value="名前"/>
                             </f:facet>
-                            <h:outputText value="#{item.name}"/>
+                            <h:commandLink action="#{armMasterController.prepareEdit}" value="#{item.name}"/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
@@ -144,7 +144,7 @@
                             <f:facet name="header">
                                 <h:outputText value="&nbsp;"/>
                             </f:facet>
-                            <h:commandLink action="#{armMasterController.prepareEdit}" value="編集"/>
+                            <h:commandLink action="#{armMasterController.prepareCopy}" value="コピー"/>
                         </h:column>
                     </h:dataTable>
                 </h:panelGroup>
