fix: CampaignMasterControllerConverter to get EJB through InitialContext

--- a/web/characterSheet/CharacterListPage.xhtml
+++ b/web/characterSheet/CharacterListPage.xhtml
@@ -33,10 +33,12 @@
                         
                     <h:panelGrid id="charaListGridPanel" style="width: 100%; height: 100%;" styleClass="tableGrid">
                         <h:dataTable binding="#{characterSheetController.characterListDataTable}"
-                                     id="characterListDataTable" styleClass="w" value="#{characterSheetController.characterDataList}" 
+                                     id="characterListDataTable" styleClass="w" 
+                                     value="#{characterSheetController.characterDataList}" 
                                      var="currentRow">
                             <h:column id="check">
-                                <h:selectBooleanCheckbox id="checkbox1" value="#{characterSheetController.characterChecked}"/>
+                                <h:selectBooleanCheckbox id="checkbox1" 
+                                                         value="#{characterSheetController.characterChecked}"/>
                             </h:column>
                             <h:column id="column1">
                                 <h:commandLink action="#{characterSheetController.charaEditLink_action}" id="charaEditLink"
